# mc-server-dashboard-api

./: .env.development.example  .env.example  .env.production.example  .env.staging.example  .env.testing.example  .envrc  .gitignore  .pre-commit-config.yaml  .tagpr  CHANGELOG.md  CLAUDE-ja.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  DAEMON_LOG_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOP.md  Makefile  PROCESS_DETACHMENT_ANALYSIS.md  README.md  REFACTOR_PLAN.md  SPECIFICATION_IMPROVEMENT_RECOMMENDATIONS.md  docker-compose.test.yml  docker-compose.yml  flake.nix  go.mod  justfile  mcs-dashboard.service  minecraft-dashboard.service  pyproject.toml  pytest.ini  requirements.txt  sqlc.yaml  test.db-journal
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yaml  nightly.yaml  tagpr.yml
app/: __init__.py  main.py  types.py
app/audit/: __init__.py  models.py  router.py  service.py
app/auth/: auth.py  dependencies.py  models.py  router.py
app/backups/: __init__.py  models.py  router.py  scheduler_router.py  schemas.py
app/core/: concurrency.py  config.py  daemon_config.py  database.py  database_utils.py  datetime_utils.py  db_ddl.py  error_handlers.py  error_schemas.py  exceptions.py  logging.py  pagination.py  security.py  visibility.py  visibility_router.py  visibility_schemas.py
app/files/: models.py  router.py  schemas.py
app/groups/: models.py  router.py  schemas.py
app/health/: __init__.py
app/middleware/: audit_middleware.py  database_monitoring.py  performance_monitoring.py
app/scripts/: __init__.py  deploy.py
app/servers/: models.py  router.py  schemas.py  service.py
app/services/: authorization_service.py  backup_scheduler.py  backup_service.py  bidirectional_sync.py  database_integration.py  encoding_handler.py  file_history_service.py  file_management_service.py  group_service.py  jar_cache_manager.py  java_compatibility.py  minecraft_api_service.py  minecraft_server.py  new_backup_scheduler.py  real_time_server_commands.py  server_properties_generator.py  server_service.py  simplified_sync.py  template_service.py  user.py  version_manager.py  visibility_migration_service.py  visibility_service.py  websocket_service.py
app/templates/: __init__.py  models.py  router.py  schemas.py
app/users/: models.py  router.py  schemas.py
app/versions/: __init__.py  management.py  models.py  repository.py  router.py  scheduler.py  schemas.py  service.py
app/websockets/: router.py
cmd/api/: main.go
cmd/runner-agent/: main.go
cmd/worker/: main.go
deployment/: minecraft-dashboard.service
deployment/nginx/: README.md  minecraft-dashboard.conf
docker/api/: Dockerfile
docker/runner-agent/: Dockerfile
docker/worker/: Dockerfile
docs/: 02-requirements.md  03-architecture-direction.md  05-monorepo-structure.md  ARCHITECTURE.md  ARCHITECTURE_LEGACY.md  CONFIGURATION.md  DAEMON_MIGRATION.md  DAEMON_PROCESS_ARCHITECTURE.md  DEPENDENCIES.md  RCON_INTEGRATION.md  README.md  RELEASING.md  SECURITY.md  TESTING.md  TEST_BASELINE.md  VERSION_TIMEOUT_ANALYSIS_AND_FIX.md  api-design.md  api-detailed-reference.md  api-endpoints-updated.md  api-endpoints.md  api-reference.md  architecture.md  backup-scheduler-redesign.md  database-design.md  database-schema-comprehensive.md  database-schema.md  database.md  development.md  file-edit-history-design.md  implementation-overview.md  java-compatibility.md  new-architecture-design.md  nginx-proxy-500-error-fix.md  requirements.md  security-performance-requirements.md  system-overview.md  testing.md
docs/app/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_LEGACY.md  CONFIGURATION.md  DAEMON_PROCESS_ARCHITECTURE.md  JAVA_COMPATIBILITY.md  LOGGING.md  RCON_INTEGRATION.md
docs/dev/: DAEMON_MIGRATION.md  DEPENDENCIES.md  RELEASING.md  TESTING.md
docs/en/: api-design.md  comprehensive-use-cases.md  current-api-endpoints.md  database-design.md  development-roadmap.md  new-architecture-design.md  project-rebuild-summary.md  technical-specification.md
docs/ja/: api-design.md  comprehensive-use-cases.md  current-api-endpoints.md  database-design.md  development-roadmap.md  new-architecture-design.md  security-performance-requirements.md  technical-specification.md
docs/redesign/: 01-current-issues.md  02-requirements.md  03-architecture-direction.md  04-feature-list.md  README.md
docs/specs/: 01-auth-users.md  02-groups.md  03-servers.md  04-versions.md  05-backups.md  06-jobs.md  07-files.md  08-realtime.md  09-audit.md
internal/config/: config.go
migrations/: 20260425000001_initial_schema.sql
scripts/: deploy.sh  dev-start.sh  populate_initial_versions.py  service-manager.sh
testing/: README.md
testing/scripts/: test_api.sh  test_server.sh
testing/web/: index.html
tests/: conftest.py  test_approval_messages.py  test_audit.py  test_auth_router.py  test_authorization_service.py  test_backup_router.py  test_backup_router_comprehensive.py  test_backup_router_enhanced.py  test_backup_schedule_service.py  test_backup_scheduler_api_permissions.py  test_backup_service.py  test_backup_service_additional_exceptions.py  test_config_validation.py  test_core_database.py  test_coverage_improvements.py  test_database_integration_enhanced.py  test_database_integration_service.py  test_database_utils.py  test_file_history_service_enhanced_coverage.py  test_file_management_service.py  test_file_router.py  test_group_router.py  test_group_service.py  test_groups_router_simple.py  test_jar_cache_manager.py  test_java_compatibility_service.py  test_main_comprehensive.py  test_main_startup.py  test_minecraft_server_coverage.py  test_minecraft_server_enhanced_coverage.py  test_minecraft_server_key_methods.py  test_minecraft_server_simple.py  test_new_backup_scheduler.py  test_performance_monitoring.py  test_port_validation.py  test_security.py  test_server_export_import.py  test_server_port_conflicts.py  test_server_router.py  test_server_service.py  (+15 more)
tests/helpers/: __init__.py  auth.py  security.py  servers.py  users.py
tests/infrastructure/: test_aiohttp_mocks.py  test_parallel_execution_isolation.py  (+2 more)
(+422 files in other folders)
