[project]
name = "mc-server-dashboard-api"
version = "0.1.0"
description = "Minecraft server management dashboard API"
readme = "README.md"
requires-python = ">=3.13"

# Deployment scripts are available via Makefile commands
# Use: make deploy, make dev, make service-status, etc.
# Or directly: ./scripts/deploy.sh

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "click==8.2.1",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email_validator==2.2.0",
    "fastapi[standard]==0.116.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "passlib==1.7.4",
    "pyasn1==0.6.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.35.2",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "starlette==0.47.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "uvicorn==0.35.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "httpx==0.28.1",
    "ruff>=0.11.12",
    "aiohttp>=3.12.9",
    "aiofiles>=24.1.0",
    "packaging>=24.0",
    "chardet>=5.2.0",
    "psutil>=6.1.0",
    "pytest-xdist>=3.7.0",
]

[tool.uv.workspace]
members = [
    "mc-server-dashboard-api",
]

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = ["tests/", ".venv"]
fix = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
# Use same settings as Black for consistency
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "coverage[toml]>=7.8.2",
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "python_multipart.*",
    "python_jose.*",
    "bcrypt.*",
    "psutil.*",
    "chardet.*",
]
ignore_missing_imports = true
