[project]
name = "mc-server-dashboard-api"
version = "0.1.0"
description = "Minecraft server management dashboard API"
readme = "README.md"
requires-python = ">=3.13"

# Task recipes are available via the justfile (`just --list` to view).
# Use: just deploy, just dev, just service-status, etc.
# Or directly: ./scripts/deploy.sh

dependencies = [
    "aiofiles>=24.1.0,<26.0.0",
    "aiohttp>=3.12.9,<4.0.0",
    "bcrypt>=4.3.0,<6.0.0",
    "chardet>=5.2.0,<8.0.0",
    "fastapi[standard]>=0.115.12,<1.0.0",
    "packaging>=25.0,<27.0.0",
    "passlib>=1.7.4,<2.0.0",
    "psutil>=7.0.0,<8.0.0",
    "pydantic>=2.11.4,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "python-jose>=3.5.0,<4.0.0",
    "SQLAlchemy>=2.0.41,<3.0.0",
    "starlette>=0.47.2,<1.1.0",
]

[tool.uv]
# Supply-chain cooldown: do not resolve packages released within the last 7 days.
# Per docs/DEPENDENCIES.md §5 and Issue #194. Override per-package with
# `--exclude-newer-package <pkg>=false` when a hotfix is needed.
exclude-newer = "7 days"

[tool.uv.workspace]
members = [
    "mc-server-dashboard-api",
]

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = ["tests/", ".venv"]
fix = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
# Use same settings as Black for consistency
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "mypy>=1.13.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.7.0",
    "httpx==0.28.1",
    "ruff>=0.11.12",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "python_multipart.*",
    "python_jose.*",
    "bcrypt.*",
    "psutil.*",
    "chardet.*",
]
ignore_missing_imports = true
